fix(workspace): close remaining benchmark races